tests/NormalTests/paczka1/small_fuzzy/54923704.err
Error in line 3: 4lll S167 5,6
Error in line 5: vy3KQIi S167 25,1
